--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "start": "webpack-serve --config example/webpack.config.js",
+    "start": "./node_modules/y-websocket/bin/server.js & webpack-serve --config example/webpack.config.js",
     "build": "tsc",
     "prepublish": "yarn build"
   },
@@ -42,7 +42,9 @@
     "resize-observer-polyfill": "^1.5.1",
     "slugify": "^1.4.0",
     "smooth-scroll-into-view-if-needed": "^1.1.27",
-    "typescript": "3.7.5"
+    "typescript": "3.7.5",
+    "y-prosemirror": "^0.3.7",
+    "yjs": "^13.4.1"
   },
   "peerDependencies": {
     "react": "^16.8.6",
@@ -84,7 +86,8 @@
     "ts-loader": "^6.2.1",
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
-    "webpack-serve": "^3.2.0"
+    "webpack-serve": "^3.2.0",
+    "y-websocket": "^1.3.5"
   },
   "resolutions": {
     "yargs-parser": "^15.0.1"
