--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "tsc --noEmit && eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
-    "start": "./node_modules/y-websocket/bin/server.js & webpack-serve --config example/webpack.config.js",
+    "start": "webpack-serve --config.default example/webpack.config.js",
+    "start-collab": "concurrently -n 'SERVER,CLIENT' -c 'red,blue' -k './node_modules/y-websocket/bin/server.js' 'webpack-serve --config.collab example/webpack.config.js'",
     "build": "tsc",
     "prepublish": "yarn build"
   },
@@ -71,6 +72,7 @@
     "@types/styled-components": "^4.4.2",
     "@typescript-eslint/eslint-plugin": "^2.17.0",
     "@typescript-eslint/parser": "^2.17.0",
+    "concurrently": "^5.3.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-react-app": "^2.1.0",
@@ -87,6 +89,7 @@
     "webpack": "^4.29.6",
     "webpack-cli": "^3.2.3",
     "webpack-serve": "^3.2.0",
+    "y-indexeddb": "^9.0.5",
     "y-websocket": "^1.3.5"
   },
   "resolutions": {
