--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "noImplicitAny": false,
     "esModuleInterop": true,
     "allowJs": true,
+    "skipLibCheck": true,
     "module": "commonjs",
     "target": "es2017",
     "jsx": "react",
